--- a/css/style.css
+++ b/css/style.css
@@ -4,6 +4,10 @@
   box-sizing: border-box;
 }
 
+/*
+ # Atention Branche master 
+*/
+
 ul {
   list-style-type: none;
   margin-block-start: 0.5em;
@@ -44,6 +48,10 @@ p {
   height: 400px;
 }
 
+/*
+ # Atention Branche master 
+*/
+
 /*Tipe d'article*/
 
 .enteteVignetteText {
@@ -65,6 +73,10 @@ p {
 }
 
 /*rege pou gand ecrant*/
+
+/*
+ # Atention Branche master 
+*/
 
 @media (min-width: 768px) {
   #wrape {
@@ -98,6 +110,10 @@ p {
     flex-direction: column;
   }
 
+  /*
+  # Atention Branche master 
+  */
+
   .listesousMenu {
     display: flex;
     flex-direction: column;
@@ -127,6 +143,10 @@ p {
     flex-direction: column;
   }
 
+  /*
+  # Atention Branche master 
+  */
+
   .enteteVignetteText {
     position: sticky;
     top: 0px;
@@ -134,3 +154,7 @@ p {
     width: 100%;
   }
 }
+
+/*
+  # Atention Branche master 
+  */
